--- a/config/locales/change.yml
+++ b/config/locales/change.yml
@@ -1,6 +1,6 @@
 en:
   change:
     status:
-      to: 'Status set to **%{to}**.'
-      from_to: 'Status changed from **%{from}** to **%{to}**'
-      detail: '* %{label}: %{value}'
+      to: '<p>Status set to <strong>%{to}</strong></p>'
+      from_to: '<p>Status changed from <strong>%{from}</strong> to <strong>%{to}</strong></p>'
+      detail: '<li>%{label}: <strong>%{value}</strong></li>'
